--- a/tugas3/footer.html
+++ b/tugas3/footer.html
@@ -23,8 +23,7 @@
     </style>
 </head>
 <body>
-    <p>Created by [Your Name]</p>
+    <p>Created by <a href="https://fatkhurrhn.vercel.app/" target="_blank">Fatkhurrhn</a></p>
     <p>© 2025 All Rights Reserved</p>
-    <p><a href="mailto:your.email@example.com">Contact Me</a></p>
 </body>
 </html>
