--- a/tugas3/left.html
+++ b/tugas3/left.html
@@ -38,11 +38,11 @@
     <fieldset>
         <legend>Friends' Social Media</legend>
         <ul>
-            <li><a href="https://linkedin.com/in/friend1" target="_blank">John Doe - LinkedIn</a></li>
-            <li><a href="https://github.com/friend2" target="_blank">Jane Smith - GitHub</a></li>
-            <li><a href="https://twitter.com/friend3" target="_blank">Mike Johnson - Twitter</a></li>
-            <li><a href="https://instagram.com/friend4" target="_blank">Sarah Williams - Instagram</a></li>
-            <li><a href="https://facebook.com/friend5" target="_blank">David Brown - Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/fakhirul-akmal/" target="_blank">fakhirul akmal - LinkedIn</a></li>
+            <li><a href="https://github.com/romyhsb" target="_blank">Romy Wahyudi - GitHub</a></li>
+            <li><a href="https://x.com/prabowo" target="_blank">Prabowo - Twitter</a></li>
+            <li><a href="https://www.instagram.com/genquran.nf/" target="_blank">genquran - Instagram</a></li>
+            <li><a href="https://www.facebook.com/groups/378029113438251/" target="_blank">Elon Musk - Facebook</a></li>
         </ul>
     </fieldset>
 </body>
