--- a/tugas3/right.html
+++ b/tugas3/right.html
@@ -38,11 +38,15 @@
     <fieldset>
         <legend>Learning Resources</legend>
         <ul>
-            <li><a href="https://www.w3schools.com" target="_blank">HTML/CSS Fundamentals</a></li>
-            <li><a href="https://javascript.info" target="_blank">JavaScript Guide</a></li>
-            <li><a href="https://reactjs.org" target="_blank">React Framework</a></li>
-            <li><a href="https://nodejs.org" target="_blank">Node.js Backend</a></li>
-            <li><a href="https://www.mongodb.com" target="_blank">MongoDB Database</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=409" target="_blank">Desain Web</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=410" target="_blank">UI/UX</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=410" target="_blank">Git/Github</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=411" target="_blank">Pemrograman JavaScript ES6</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=416" target="_blank">React JS Dasar</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=412" target="_blank">Database MySQL/MariaDB</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=412" target="_blank">Pemrograman PHP</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=414" target="_blank">Framework Laravel</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=437" target="_blank">React JS Lanjutan</a></li>
         </ul>
     </fieldset>
 </body>
