--- a/tugas3/study.html
+++ b/tugas3/study.html
@@ -35,18 +35,18 @@
         <tr>
             <th>Year</th>
             <th>Institution</th>
-            <th>Degree/Certificate</th>
+            <th>Degree</th>
             <th>Major</th>
         </tr>
         <tr>
-            <td>2020-2024</td>
-            <td>University Name</td>
+            <td>2022 - present</td>
+            <td>STT Nurul Fikri</td>
             <td>Bachelor's Degree</td>
             <td>Computer Science</td>
         </tr>
         <tr>
-            <td>2017-2020</td>
-            <td>High School Name</td>
+            <td>2019 - 2022</td>
+            <td>SMK Thursina YBM PLN</td>
             <td>High School Diploma</td>
             <td>Science Track</td>
         </tr>
