--- a/tugas3/gallery.html
+++ b/tugas3/gallery.html
@@ -28,17 +28,12 @@
 </head>
 <body>
     <h1>My Gallery</h1>
-    <marquee behavior="scroll" direction="left">
-        <img src="/api/placeholder/200/150" alt="Project 1">
-        <img src="/api/placeholder/200/150" alt="Project 2">
-        <img src="/api/placeholder/200/150" alt="Project 3">
-        <img src="/api/placeholder/200/150" alt="Project 4">
-        <img src="/api/placeholder/200/150" alt="Project 5">
-    </marquee>
     <div class="gallery">
-        <a href="project1.html" target="_blank"><img src="https://wallpaperaccess.com/full/4723250.jpg" alt="Project 1"></a>
-        <a href="project2.html" target="_blank"><img src="https://wallpaperaccess.com/full/4723250.jpg" alt="Project 2"></a>
-        <a href="project3.html" target="_blank"><img src="https://wallpaperaccess.com/full/4723250.jpg" alt="Project 3"></a>
+        <img src="https://i.pinimg.com/736x/56/67/93/5667936906181a6fbe0501b471e2b5bd.jpg" alt="image-gallery">
+        <img src="https://i.pinimg.com/736x/13/36/55/1336551c8bb3e2f3be4c3d35f26aa865.jpg" alt="image-gallery">
+        <img src="https://i.pinimg.com/736x/2b/35/49/2b3549ecad26aeeccb9d6f0cb7bd4b44.jpg" alt="image-gallery">
+        <img src="https://i.pinimg.com/736x/b3/18/54/b31854bc51e0af7fca101d1cb2ed4cd7.jpg" alt="image-gallery">
+        <img src="https://i.pinimg.com/736x/0c/a5/e6/0ca5e68d29840d031a137a20f40580a1.jpg" alt="image-gallery">
     </div>
 </body>
 </html>
