--- a/tugas3/home.html
+++ b/tugas3/home.html
@@ -57,16 +57,18 @@
 </head>
 <body>
     <div class="profile">
-        <img src="https://wallpaperaccess.com/full/4723250.jpg" alt="Profile Picture" class="profile-img">
+        <img src="https://i.ibb.co.com/KcSvZcm5/pp-1.png" alt="Profile Picture" class="profile-img">
         <h1>About Me</h1>
         <div class="social-buttons">
-            <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#" class="github"><i class="fa-brands fa-github"></i></a>
-            <a href="#" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="#" class="website"><i class="fa-solid fa-globe"></i></a>
+            <a href="https://linkedin.com/in/fatkhurrhn/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/fatkhurrhn/" target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
+            <a href="https://tiktok.com/@fatkhurrhnn/" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://fatkhurrhn.vercel.app/" target="_blank" class="website"><i class="fa-solid fa-globe"></i></a>
         </div>
-        <p>The morning sun streams through my window in Beji-Kukusan, Depok, as I, M. Fatkhurrohman, or Fathur, prepare for another day. As a fifth-semester Information Systems student at Nurul Fikri Integrated Technology College, I'm pursuing my dreams in West Java, fueled by a scholarship that has been a tremendous help.</p>
-        <p>My journey in web development started [your background]. I'm constantly exploring new technologies and frameworks to improve my skills and create better solutions.</p>
+        <div style="text-align:justify ;">
+            <p>The morning sun streams through my window in Beji-Kukusan, Depok, as I, M. Fatkhurrohman, or Fathur, prepare for another day. As a sixth-semester Information Systems student at Nurul Fikri Integrated Technology College, I'm pursuing my dreams in West Java, fueled by a scholarship that has been a tremendous help.</p>
+        <p>My passion for technology drives me to constantly learn and share my insights through engaging social media content. With 90,000 followers on Instagram, over 1K on LinkedIn, and over 3,000 on TikTok, I believe that technology can be a powerful force for good in the world. I'm determined to continue learning, growing, and contributing to this field, turning my aspirations into reality.</p>
+        </div>
     </div>
 </body>
 </html>
