--- a/tugas4/header.html
+++ b/tugas4/header.html
@@ -4,50 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #1e3c72, #2a5298, #6a11cb, #2575fc);
-            color: white;
-            font-family: 'Poppins', sans-serif;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .banner {
-            padding: 30px 50px;
-            border-radius: 15px;
-            backdrop-filter: blur(15px);
-            background: rgba(255, 255, 255, 0.15);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            max-width: 90%;
-        }
-
-        h1 {
-            font-size: 3rem;
-            font-weight: 600;
-            color: #f0f0f0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2.2rem;
-            }
-            .banner {
-                padding: 20px 30px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <div class="banner">
