--- a/tugas4/footer.html
+++ b/tugas4/footer.html
@@ -1,26 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <style>
-        body {
-            margin: 0;
-            padding: 10px;
-            background-color: #2c3e50;
-            color: white;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        p {
-            margin: 5px 0;
-        }
-        a {
-            color: #3498db;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer</title>
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <p>Created by <a href="https://fatkhurrhn.vercel.app/" target="_blank">Fatkhurrhn</a></p>
