--- a/tugas4/gallery.html
+++ b/tugas4/gallery.html
@@ -1,33 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background-color: #f5f6fa;
-        }
-        .gallery {
-            text-align: center;
-        }
-        .gallery img {
-            width: 200px;
-            height: 150px;
-            margin: 10px;
-            border: 2px solid #3498db;
-            border-radius: 5px;
-            transition: transform 0.3s;
-        }
-        .gallery img:hover {
-            transform: scale(1.1);
-        }
-        marquee {
-            margin: 20px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
-    <h1>My Gallery</h1>
     <div class="gallery">
         <img src="https://i.pinimg.com/736x/56/67/93/5667936906181a6fbe0501b471e2b5bd.jpg" alt="image-gallery">
         <img src="https://i.pinimg.com/736x/13/36/55/1336551c8bb3e2f3be4c3d35f26aa865.jpg" alt="image-gallery">
