--- a/tugas4/home.html
+++ b/tugas4/home.html
@@ -2,58 +2,7 @@
 <html>
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" crossorigin="anonymous"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background-color: #f5f6fa;
-        }
-        .profile {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            display: block;
-            margin: 0 auto 20px;
-        }
-        h1 {
-            color: #2c3e50;
-            text-align: center;
-        }
-        p {
-            color: #34495e;
-            line-height: 1.6;
-        }
-        .social-buttons {
-            display: flex;
-            justify-content: center; /* Pusatkan horizontal */
-            align-items: center; /* Pusatkan vertikal */
-        }
-        .social-buttons a {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-            font-size: 16px;
-            color: white;
-            border-radius: 50%;
-            transition: transform 0.3s ease, opacity 0.3s ease;
-            text-decoration: none;
-            margin: 5px;
-        }
-        .linkedin { background: #0077B5; }
-        .github { background: #333; }
-        .tiktok { background: #000; }
-        .website { background: #ff5722; }
-        .social-buttons a:hover {
-            transform: scale(1.1);
-            opacity: 0.8;
-        }
-    </style>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <div class="profile">
