--- a/tugas4/nav.html
+++ b/tugas4/nav.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <style>
-        body {
-            margin: 0;
-            padding: 10px;
-            background-color: #34495e;
-            text-align: center;
-        }
-        .nav-link {
-            display: inline-block;
-            padding: 8px 20px;
-            margin: 0 10px;
-            background-color: #2980b9;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-family: Arial, sans-serif;
-            transition: background-color 0.3s;
-        }
-        .nav-link:hover {
-            background-color: #3498db;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navigation</title>
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <a href="home.html" target="mainContent" class="nav-link">Home</a>
-    <a href="study.html" target="mainContent" class="nav-link">MyStudy</a>
-    <a href="gallery.html" target="mainContent" class="nav-link">Gallery</a>
+    <div class="nav-container">
+        <a href="home.html" target="mainContent" class="nav-link">Home</a>
+        <a href="study.html" target="mainContent" class="nav-link">MyStudy</a>
+        <a href="gallery.html" target="mainContent" class="nav-link">Gallery</a>
+    </div>
 </body>
 </html>
