--- a/tugas4/right.html
+++ b/tugas4/right.html
@@ -1,38 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <style>
-        body {
-            background-color: #f5f6fa;
-            padding: 10px;
-            font-family: Arial, sans-serif;
-        }
-        fieldset {
-            border: 2px solid #3498db;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
-        legend {
-            color: #2c3e50;
-            font-weight: bold;
-            padding: 0 10px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-        a:hover {
-            color: #3498db;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learning Resources</title>
+    <link rel="stylesheet" href="css/left-right.css">
 </head>
 <body>
     <fieldset>
@@ -40,13 +12,9 @@
         <ul>
             <li><a href="https://learn.nfacademy.id/course/view.php?id=409" target="_blank">Desain Web</a></li>
             <li><a href="https://learn.nfacademy.id/course/view.php?id=410" target="_blank">UI/UX</a></li>
-            <li><a href="https://learn.nfacademy.id/course/view.php?id=410" target="_blank">Git/Github</a></li>
+            <li><a href="https://learn.nfacademy.id/course/view.php?id=410" target="_blank">Git/GitHub</a></li>
             <li><a href="https://learn.nfacademy.id/course/view.php?id=411" target="_blank">Pemrograman JavaScript ES6</a></li>
             <li><a href="https://learn.nfacademy.id/course/view.php?id=416" target="_blank">React JS Dasar</a></li>
-            <li><a href="https://learn.nfacademy.id/course/view.php?id=412" target="_blank">Database MySQL/MariaDB</a></li>
-            <li><a href="https://learn.nfacademy.id/course/view.php?id=412" target="_blank">Pemrograman PHP</a></li>
-            <li><a href="https://learn.nfacademy.id/course/view.php?id=414" target="_blank">Framework Laravel</a></li>
-            <li><a href="https://learn.nfacademy.id/course/view.php?id=437" target="_blank">React JS Lanjutan</a></li>
         </ul>
     </fieldset>
 </body>
