--- a/materi-javascript/tugas2/index.html
+++ b/materi-javascript/tugas2/index.html
@@ -53,6 +53,7 @@
                 <th>Tunjangan Jabatan</th>
                 <th>BPJS</th>
                 <th>Tunjangan Keluarga</th>
+                <th>Total Gaji</th>
             </tr>
         </thead>
         <tbody id="tableBody">
