--- a/materi-javascript/tugas4/index.html
+++ b/materi-javascript/tugas4/index.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="nomorTelepon" class="form-label">Nomor Telepon</label>
-                                <input type="tel" class="form-control" id="nomorTelepon" required>
+                                <input type="number" class="form-control" id="nomorTelepon" required>
                             </div>
                             <div class="mb-3">
                                 <label for="kendaraan" class="form-label">Kendaraan</label>
